# dex-sim

./: .gitignore  README.md  analysis.py  ccp_risk_proposal.md  data_structures.py  garch_params.json  plotting.py  pyproject.toml  run.py  run_analysis.py  run_analysis_vectorized.py  run_two_trader.py  simulation.py  simulation_engine.py
config/: aes_vs_fxd_test.yaml
minimal_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/dex_sim/: analysis.py  calibrate.py  cli.py  data_structures.py  engine.py  engine_columnar.py  engine_numba_columnar.py  experiment_manager.py  get_data.py  mc_generator.py  plotting.py  results_io.py  run.py  run_pluggable.py  summary.py
src/dex_sim/engine/: engine_columnar.py
src/dex_sim/models/: __init__.py  aes.py  base.py  components.py  fxd.py
src/dex_sim/plotting/: __init__.py  dashboard.py  dashboard_export.py  layout.py
src/dex_sim/plotting/panels/: distribution_panel.py  exposure_panel.py  leverage_panel.py  liquidation_panel.py  margin_panel.py  path_drilldown_panel.py  risk_panel.py  tradeflow_panel.py
src/dex_sim/plotting/utils/: color_schemes.py  transforms.py
tests/: test_components.py  test_engine.py  test_experiment_manager.py  test_io.py  test_mc_generator.py  test_models.py  test_plotting.py
